@@ -12,6 +12,8 @@ What's New in Python 2.3.1?
 Core and builtins
 -----------------
 
+- Bug #775985: Only set stdout.encoding if a codec is available.
+
 Extension modules
 -----------------
 
